create correlation figure

--- a/benchmarks/dtw_benchmark.ipynb
+++ b/benchmarks/dtw_benchmark.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -22,14 +22,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
         "from constants import PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER, SIMILARITIES_OUTPUT_FOLDER_PORTO, SIMILARITIES_OUTPUT_FOLDER_KOLUMBUS, SIMILARITIES_OUTPUT_FOLDER_ROME\n",
         "DATA_ROME = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
         "TEST_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-50.txt\"\n",
-        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-1000.txt\"\n",
+        "FULL_SET_ROME = f\"../{ROME_OUTPUT_FOLDER}/META-500.txt\"\n",
         "SIMILARITIES_OUTPUT_FOLDER_ROME = f\"../{SIMILARITIES_OUTPUT_FOLDER_ROME}/\"\n",
         "DTW_FILENAME_ROME = \"rome-dtw-fullset.csv\"\n",
         "DTW_FILENAME_TEST_ROME = \"rome-dtw-testset.csv\"\n",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -368,7 +368,7 @@
         "\n",
         "runs = 10\n",
         "data_sets = range(500, 501, 100)\n",
-        "output_folder = \"../benchmarks/similarities/timing\"\n",
+        "output_folder = \"../benchmarks/similarities_runtimes/\"\n",
         "file_name = \"similarity_runtimes_true_dtw_rome_500.csv\"\n",
         "\n",
         "df = pd.DataFrame(\n",
@@ -378,7 +378,7 @@
         "for size in data_sets:\n",
         "    print(f\"Computing size {size}\", end=\"\\r\")\n",
         "    execution_times = measure_similarities(\n",
-        "        \"dtw_py\", DATA_PORTO, portoSet(size), parallell_jobs=runs\n",
+        "        \"dtw_py\", DATA_ROME, romeSet(size), parallell_jobs=runs\n",
         "    )\n",
         "    df[size] = [element[0] for element in execution_times]\n",
         "\n",
@@ -392,7 +392,7 @@
         "    index_col=0,\n",
         ")\n",
         "\n",
-        "# of[\"500\"] = f1[\"500\"]\n",
+        "of[\"500\"] = f1[\"500\"]\n",
         "# of[\"700\"] = f1[\"700\"]\n",
         "\n",
         "of.to_csv(\"../benchmarks/similarities/timing/similarity_runtimes_true_dtw_rome.csv\")\n",
