--- a/schemes/lsh_grid.ipynb
+++ b/schemes/lsh_grid.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "resolution = 1.2  # km\n",
     "layers = 5\n",
-    "meta_file = f\"../{ROME_OUTPUT_FOLDER}/META-100.txt\"\n",
+    "meta_file = f\"../{ROME_OUTPUT_FOLDER}/META-1000.txt\"\n",
     "\n",
     "GridRome = GridLSH(\n",
     "    \"Rome G1\",\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "\n",
     "resolution = 1.6  # km\n",
     "layers = 5\n",
-    "meta_file = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-100.txt\"\n",
+    "meta_file = f\"../{KOLUMBUS_OUTPUT_FOLDER}/META-1000.txt\"\n",
     "\n",
     "GridKolumbus = GridLSH(\n",
     "    \"Kolumbus G1\",\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
