--- a/schemes/lsh_disk.ipynb
+++ b/schemes/lsh_disk.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,14 @@
     "\n",
     "from helpers.lsh_disk import DiskLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
+    "from utils.helpers import file_handler as fh\n",
     "from schemes.experiments import hashing\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,24 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['R_DYR.txt', 'R_AKD.txt', 'R_CRS.txt', 'META-2000.txt', 'META-200.txt', 'R_BOX.txt', 'R_DNZ.txt', 'META-50.txt', 'R_DYD.txt', 'R_AIO.txt', 'R_DMT.txt', 'R_CHI.txt', 'R_BVN.txt', 'META-2200.txt', 'R_DAV.txt', 'R_DTW.txt', 'R_AFR.txt', 'META-2600.txt', 'R_BMW.txt', 'R_BZI.txt', 'R_BYR.txt', 'R_BLR.txt', 'R_EIO.txt', 'R_DLC.txt', 'META-400.txt', 'R_AHO.txt', 'R_DWI.txt', 'R_DZN.txt', 'META-600.txt', 'R_AJE.txt', 'R_CFS.txt', 'R_CFD.txt', 'R_AQX.txt', 'R_DLA.txt', 'R_BMT.txt', 'META-1900.txt', 'R_CKB.txt', 'R_DTF.txt', 'META-2400.txt', 'R_ALT.txt', 'META-100.txt', 'R_DKC.txt', 'R_DJG.txt', 'R_CLV.txt', 'R_BRQ.txt', 'R_BSB.txt', 'R_DQL.txt', 'META-2300.txt', 'R_CWH.txt', 'META-2100.txt', 'R_CMF.txt', 'R_EAC.txt', '.gitkeep', 'R_BFW.txt', 'R_BDH.txt', 'R_EBY.txt', 'META-300.txt', 'R_CLC.txt', 'R_DGB.txt', 'R_CUE.txt', 'META-700.txt', 'META-2500.txt', 'R_CNY.txt', 'R_DFC.txt', 'R_CBM.txt', 'META-1800.txt', 'R_CBX.txt', 'META-2700.txt', 'R_BRU.txt', 'META-500.txt', 'R_CLR.txt', 'R_CAB.txt', 'R_CVK.txt', 'R_AMY.txt', 'R_AMN.txt', 'R_DIU.txt', 'META-900.txt', 'R_AMO.txt', 'META-1600.txt', 'R_DPC.txt', 'META-1400.txt', 'R_AYH.txt', 'R_EAJ.txt', 'META-2900.txt', 'R_BHT.txt', 'R_CAM.txt', 'META-3000.txt', 'R_DQU.txt', 'R_DPF.txt', 'R_DDT.txt', 'R_BEA.txt', 'META-1000.txt', 'R_AOC.txt', 'R_DHT.txt', 'R_BEU.txt', 'META-1200.txt', 'R_EMX.txt', 'R_DEE.txt', 'R_DBF.txt', 'META-2800.txt', 'META-1500.txt', 'R_EDQ.txt', 'R_BUH.txt', 'R_BBV.txt', 'R_ARN.txt', 'R_AQU.txt', 'R_CGZ.txt', 'R_CEE.txt', 'META-800.txt', 'R_DTH.txt', 'R_CFK.txt', 'R_EJY.txt', 'META-1700.txt', 'R_AQV.txt', 'R_CKZ.txt', 'R_AIG.txt', 'R_ADD.txt', 'R_AHG.txt', 'META-1300.txt', 'R_CIV.txt', 'R_AQE.txt', 'R_BBF.txt', 'R_BWG.txt', 'R_BVB.txt', 'R_DCR.txt', 'R_CQD.txt', 'R_CGI.txt', 'R_ASY.txt', 'R_CHP.txt', 'R_CSZ.txt', 'R_DVP.txt', 'META-1100.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_ROME):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_ROME, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_ROME, \".gitkeep\")"
    ]
   },
   {
@@ -159,17 +158,7 @@
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_PORTO, \".gitkeep\")"
    ]
   },
   {
@@ -238,17 +227,7 @@
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_KOLUMBUS, \".gitkeep\")"
    ]
   },
   {
