--- a/schemes/lsh_grid.ipynb
+++ b/schemes/lsh_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "\n",
     "from helpers.lsh_grid import GridLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
+    "from utils.helpers import file_handler as fh\n",
     "from schemes.experiments import hashing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,24 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_ROME):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_ROME, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_ROME, \".gitkeep\")"
    ]
   },
   {
@@ -134,17 +125,7 @@
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_PORTO, \".gitkeep\")"
    ]
   },
   {
@@ -212,17 +193,7 @@
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
-    "        if filename.startswith(\".gitkeep\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    fh.delete_old_files(OUTPUT_FOLDER_KOLUMBUS, \".gitkeep\")"
    ]
   },
   {
