--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -18,6 +18,7 @@
     "from utils.helpers.alphabetical_number import increment_alphabetical\n",
     "from utils.helpers.save_trajectory import save_current_trajectory\n",
     "from utils.helpers.metafile_handler import create_meta_files\n",
+    "from utils.helpers.file_handler import delete_old_files\n",
     "\n",
     "from constants import K_MAX_LON, K_MAX_LAT, K_MIN_LAT, K_MIN_LON, KOLUMBUS_OUTPUT_FOLDER \n",
     "\n",
@@ -106,17 +107,7 @@
     "# Run this cell to clear the chosen files in the PORTO folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER):\n",
-    "        if filename.startswith(\"META\"):\n",
-    "            continue\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+    "    delete_old_files(OUTPUT_FOLDER, \"META\")"
    ]
   },
   {
