create utils function for saving trajectory hashes

--- a/schemes/lsh_disk.ipynb
+++ b/schemes/lsh_disk.ipynb
@@ -31,6 +31,7 @@
     "from helpers.lsh_disk import DiskLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
     "from utils.helpers import file_handler as fh\n",
+    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
     "from schemes.experiments import hashing\n",
     "\n"
    ]
@@ -127,11 +128,7 @@
     "# Generating the hashes and storing them in output folder along with the meta-files\n",
     "hashes = DiskRome.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_ROME}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_ROME, hashes)\n",
     "\n",
     "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(ROME_DATA)\n",
@@ -198,11 +195,7 @@
     "\n",
     "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_PORTO, hashes)\n",
     "\n",
     "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
@@ -266,11 +259,7 @@
     "# Generating the hashes and storing them in output folder along with the meta-files\n",
     "hashes = DiskKolumbus.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_KOLUMBUS}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_KOLUMBUS, hashes)\n",
     "\n",
     "# Copying meta_files as well\n",
     "meta_files = mfh.get_meta_files(KOLUMBUS_DATA)\n",
