--- a/schemes/lsh_grid.ipynb
+++ b/schemes/lsh_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from helpers.lsh_grid import GridLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
     "from utils.helpers import file_handler as fh\n",
+    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
     "from schemes.experiments import hashing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +96,7 @@
     "\n",
     "hashes = GridRome.compute_dataset_hashes()\n",
     "\n",
-    "# Saving the hashes to files\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_ROME}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_ROME, hashes)\n",
     "\n",
     "# Copying the meta_files:\n",
     "meta_files = mfh.get_meta_files(ROME_DATA)\n",
@@ -118,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,12 +159,7 @@
     "\n",
     "hashes = GridPorto.compute_dataset_hashes()\n",
     "\n",
-    "# Saving the hashes to files\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_PORTO, hashes)\n",
     "\n",
     "# Copying the meta_files\n",
     "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,12 +222,7 @@
     "\n",
     "hashes = GridKolumbus.compute_dataset_hashes()\n",
     "\n",
-    "# Saving the hashes to files\n",
-    "for key in hashes:\n",
-    "    with open(f\"{OUTPUT_FOLDER_KOLUMBUS}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close()\n",
+    "save_trajectory_hashes(OUTPUT_FOLDER_KOLUMBUS, hashes)\n",
     "\n",
     "# Copying the meta_files\n",
     "meta_files = mfh.get_meta_files(KOLUMBUS_DATA)\n",
