create frechet similarities based on hashed disk-based schemes

--- a/hashed_similarities/disk_hashed_similarities.ipynb
+++ b/hashed_similarities/disk_hashed_similarities.ipynb
@@ -27,13 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cy Pool Frehet: 0/50\n",
+      "Cy Pool Frehet: 5/50\n",
+      "Cy Pool Frehet: 10/50\n",
+      "Cy Pool Frehet: 15/50\n",
+      "Cy Pool Frehet: 20/50\n",
+      "Cy Pool Frehet: 25/50\n",
+      "Cy Pool Frehet: 30/50\n",
+      "Cy Pool Frehet: 35/50\n",
+      "Cy Pool Frehet: 40/50\n",
+      "Cy Pool Frehet: 45/50\n"
+     ]
+    }
+   ],
    "source": [
     "# Disk Rome\n",
-    "similarities = generate_disk_hash_similarity(\"rome\", 1.6, 5, 50)\n",
-    "output_path = \"output/disk/rome/disk_rome.csv\"\n",
+    "# measure = \"dtw\"\n",
+    "measure = \"frechet\"\n",
+    "similarities = generate_disk_hash_similarity(\"rome\", 1.6, 5, 50, measure=measure)\n",
+    "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -46,13 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Disk Porto\n",
-    "similarities = generate_disk_hash_similarity(\"porto\", 2.2, 4, 60)\n",
-    "output_path = \"output/disk/porto/disk_porto.csv\"\n",
+    "measure = \"dtw\"\n",
+    "# measure = \"frechet\"\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    \"porto\", 2.2, 4, 60, measure=measure)\n",
+    "output_path = f\"output/disk/porto/disk_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -65,13 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Disk Kolumbus\n",
-    "similarities = generate_disk_hash_similarity(\"kolumbus\", 2.2, 4, 60)\n",
-    "output_path = \"output/disk/kolumbus/disk_kolumbus.csv\"\n",
+    "measure = \"dtw\"\n",
+    "# measure = \"frechet\"\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    \"kolumbus\", 2.2, 4, 60, measure=measure)\n",
+    "output_path = f\"output/disk/kolumbus/disk_kolumbus-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   }
