--- a/hashed_similarities/disk_hashed_similarities.ipynb
+++ b/hashed_similarities/disk_hashed_similarities.ipynb
@@ -27,23 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cy Pool Frehet: 0/50\n",
-      "Cy Pool Frehet: 5/50\n",
-      "Cy Pool Frehet: 10/50\n",
-      "Cy Pool Frehet: 15/50\n",
-      "Cy Pool Frehet: 20/50\n",
-      "Cy Pool Frehet: 25/50\n",
-      "Cy Pool Frehet: 30/50\n",
-      "Cy Pool Frehet: 35/50\n",
-      "Cy Pool Frehet: 40/50\n",
-      "Cy Pool Frehet: 45/50\n"
+      "Cy Pool Frechet: 0/50\n",
+      "Cy Pool Frechet: 5/50\n",
+      "Cy Pool Frechet: 10/50\n",
+      "Cy Pool Frechet: 15/50\n",
+      "Cy Pool Frechet: 20/50\n",
+      "Cy Pool Frechet: 25/50\n",
+      "Cy Pool Frechet: 30/50\n",
+      "Cy Pool Frechet: 35/50\n",
+      "Cy Pool Frechet: 40/50\n",
+      "Cy Pool Frechet: 45/50\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "# Disk Rome\n",
     "# measure = \"dtw\"\n",
     "measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\"rome\", 1.6, 5, 50, measure=measure)\n",
+    "similarities = generate_disk_hash_similarity(city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50)\n",
     "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
