remove 'py' prefix from frechet cython in disk

--- a/hashed_similarities/disk_hashed_similarities.ipynb
+++ b/hashed_similarities/disk_hashed_similarities.ipynb
@@ -26,6 +26,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DTW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measure = \"dtw\"\n",
+    "similarities = generate_disk_hash_similarity(city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50)\n",
+    "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
+    "similarities.to_csv(os.path.abspath(output_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frechet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -48,8 +74,7 @@
     }
    ],
    "source": [
-    "# Disk Rome\n",
-    "# measure = \"dtw\"\n",
+    "\n",
     "measure = \"frechet\"\n",
     "similarities = generate_disk_hash_similarity(city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50)\n",
     "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
