move hash generation to its own folder and hashed data into dataset folder

--- a/hash_generation/generate_disk_hashes.ipynb
+++ b/hash_generation/generate_disk_hashes.ipynb
@@ -28,28 +28,43 @@
     "sys.path.append(parentdir)\n",
     "\n",
     "\n",
-    "from helpers.lsh_disk import DiskLSH\n",
+    "from schemes.helpers.lsh_disk import DiskLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
     "from utils.helpers import file_handler as fh\n",
-    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
-    "from schemes.experiments import hashing\n",
-    "\n"
+    "from utils.helpers.save_trajectory import save_trajectory_hashes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constants import P_MAX_LON, P_MIN_LON,P_MAX_LAT,P_MIN_LAT,R_MAX_LON,R_MIN_LON,R_MAX_LAT,R_MIN_LAT,K_MAX_LON,K_MIN_LON,K_MAX_LAT,K_MIN_LAT, PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER\n",
+    "from constants import (\n",
+    "    P_MAX_LON,\n",
+    "    P_MIN_LON,\n",
+    "    P_MAX_LAT,\n",
+    "    P_MIN_LAT,\n",
+    "    R_MAX_LON,\n",
+    "    R_MIN_LON,\n",
+    "    R_MAX_LAT,\n",
+    "    R_MIN_LAT,\n",
+    "    K_MAX_LON,\n",
+    "    K_MIN_LON,\n",
+    "    K_MAX_LAT,\n",
+    "    K_MIN_LAT,\n",
+    "    PORTO_OUTPUT_FOLDER,\n",
+    "    ROME_OUTPUT_FOLDER,\n",
+    "    KOLUMBUS_OUTPUT_FOLDER,\n",
+    ")\n",
+    "\n",
     "# Declaring global variables:\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER_PORTO = \"../hashed_data/disk/porto/\"\n",
-    "OUTPUT_FOLDER_ROME = \"../hashed_data/disk/rome/\"\n",
-    "OUTPUT_FOLDER_KOLUMBUS = \"../hashed_data/disk/kolumbus/\"\n",
+    "OUTPUT_FOLDER_PORTO = \"../dataset/hashed_data/disk/porto/\"\n",
+    "OUTPUT_FOLDER_ROME = \"../dataset/hashed_data/disk/rome/\"\n",
+    "OUTPUT_FOLDER_KOLUMBUS = \"../dataset/hashed_data/disk/kolumbus/\"\n",
     "\n",
     "PORTO_DATA = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
     "ROME_DATA = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
@@ -67,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['R_DYR.txt', 'R_AKD.txt', 'R_CRS.txt', 'META-2000.txt', 'META-200.txt', 'R_BOX.txt', 'R_DNZ.txt', 'META-50.txt', 'R_DYD.txt', 'R_AIO.txt', 'R_DMT.txt', 'R_CHI.txt', 'R_BVN.txt', 'META-2200.txt', 'R_DAV.txt', 'R_DTW.txt', 'R_AFR.txt', 'META-2600.txt', 'R_BMW.txt', 'R_BZI.txt', 'R_BYR.txt', 'R_BLR.txt', 'R_EIO.txt', 'R_DLC.txt', 'META-400.txt', 'R_AHO.txt', 'R_DWI.txt', 'R_DZN.txt', 'META-600.txt', 'R_AJE.txt', 'R_CFS.txt', 'R_CFD.txt', 'R_AQX.txt', 'R_DLA.txt', 'R_BMT.txt', 'META-1900.txt', 'R_CKB.txt', 'R_DTF.txt', 'META-2400.txt', 'R_ALT.txt', 'META-100.txt', 'R_DKC.txt', 'R_DJG.txt', 'R_CLV.txt', 'R_BRQ.txt', 'R_BSB.txt', 'R_DQL.txt', 'META-2300.txt', 'R_CWH.txt', 'META-2100.txt', 'R_CMF.txt', 'R_EAC.txt', '.gitkeep', 'R_BFW.txt', 'R_BDH.txt', 'R_EBY.txt', 'META-300.txt', 'R_CLC.txt', 'R_DGB.txt', 'R_CUE.txt', 'META-700.txt', 'META-2500.txt', 'R_CNY.txt', 'R_DFC.txt', 'R_CBM.txt', 'META-1800.txt', 'R_CBX.txt', 'META-2700.txt', 'R_BRU.txt', 'META-500.txt', 'R_CLR.txt', 'R_CAB.txt', 'R_CVK.txt', 'R_AMY.txt', 'R_AMN.txt', 'R_DIU.txt', 'META-900.txt', 'R_AMO.txt', 'META-1600.txt', 'R_DPC.txt', 'META-1400.txt', 'R_AYH.txt', 'R_EAJ.txt', 'META-2900.txt', 'R_BHT.txt', 'R_CAM.txt', 'META-3000.txt', 'R_DQU.txt', 'R_DPF.txt', 'R_DDT.txt', 'R_BEA.txt', 'META-1000.txt', 'R_AOC.txt', 'R_DHT.txt', 'R_BEU.txt', 'META-1200.txt', 'R_EMX.txt', 'R_DEE.txt', 'R_DBF.txt', 'META-2800.txt', 'META-1500.txt', 'R_EDQ.txt', 'R_BUH.txt', 'R_BBV.txt', 'R_ARN.txt', 'R_AQU.txt', 'R_CGZ.txt', 'R_CEE.txt', 'META-800.txt', 'R_DTH.txt', 'R_CFK.txt', 'R_EJY.txt', 'META-1700.txt', 'R_AQV.txt', 'R_CKZ.txt', 'R_AIG.txt', 'R_ADD.txt', 'R_AHG.txt', 'META-1300.txt', 'R_CIV.txt', 'R_AQE.txt', 'R_BBF.txt', 'R_BWG.txt', 'R_BVB.txt', 'R_DCR.txt', 'R_CQD.txt', 'R_CGI.txt', 'R_ASY.txt', 'R_CHP.txt', 'R_CSZ.txt', 'R_DVP.txt', 'META-1100.txt']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
@@ -87,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
