--- a/hashed_similarities/disk_hashed_similarities.ipynb
+++ b/hashed_similarities/disk_hashed_similarities.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DTW"
+    "### DTW\n"
    ]
   },
   {
@@ -39,7 +39,9 @@
    "outputs": [],
    "source": [
     "measure = \"dtw\"\n",
-    "similarities = generate_disk_hash_similarity(city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50)\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50\n",
+    ")\n",
     "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -48,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Frechet"
+    "### Frechet\n"
    ]
   },
   {
@@ -74,9 +76,10 @@
     }
    ],
    "source": [
-    "\n",
     "measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50)\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50\n",
+    ")\n",
     "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -97,8 +100,7 @@
     "# Disk Porto\n",
     "measure = \"dtw\"\n",
     "# measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\n",
-    "    \"porto\", 2.2, 4, 60, measure=measure)\n",
+    "similarities = generate_disk_hash_similarity(\"porto\", 2.2, 4, 60, measure=measure)\n",
     "output_path = f\"output/disk/porto/disk_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -119,8 +121,7 @@
     "# Disk Kolumbus\n",
     "measure = \"dtw\"\n",
     "# measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\n",
-    "    \"kolumbus\", 2.2, 4, 60, measure=measure)\n",
+    "similarities = generate_disk_hash_similarity(\"kolumbus\", 2.2, 4, 60, measure=measure)\n",
     "output_path = f\"output/disk/kolumbus/disk_kolumbus-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -142,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
