--- a/hash_generation/generate_grid_hashes.ipynb
+++ b/hash_generation/generate_grid_hashes.ipynb
@@ -2,40 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing nescessary modules\n",
-    "import os, sys\n",
+    "import os\n",
+    "import sys\n",
     "import shutil\n",
     "from multiprocessing import Pool\n",
     "\n",
     "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "parentdir = os.path.dirname(currentdir)\n",
     "sys.path.append(parentdir)\n",
-    "\n",
-    "from helpers.lsh_grid import GridLSH\n",
+    "from schemes.helpers.lsh_grid import GridLSH\n",
     "from utils.helpers import metafile_handler as mfh\n",
     "from utils.helpers import file_handler as fh\n",
-    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
-    "from schemes.experiments import hashing"
+    "from utils.helpers.save_trajectory import save_trajectory_hashes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constants import P_MAX_LON, P_MIN_LON,P_MAX_LAT,P_MIN_LAT,R_MAX_LON,R_MIN_LON,R_MAX_LAT,R_MIN_LAT,K_MAX_LON,K_MIN_LON,K_MAX_LAT,K_MIN_LAT, PORTO_OUTPUT_FOLDER, ROME_OUTPUT_FOLDER, KOLUMBUS_OUTPUT_FOLDER\n",
+    "from constants import (\n",
+    "    P_MAX_LON,\n",
+    "    P_MIN_LON,\n",
+    "    P_MAX_LAT,\n",
+    "    P_MIN_LAT,\n",
+    "    R_MAX_LON,\n",
+    "    R_MIN_LON,\n",
+    "    R_MAX_LAT,\n",
+    "    R_MIN_LAT,\n",
+    "    K_MAX_LON,\n",
+    "    K_MIN_LON,\n",
+    "    K_MAX_LAT,\n",
+    "    K_MIN_LAT,\n",
+    "    PORTO_OUTPUT_FOLDER,\n",
+    "    ROME_OUTPUT_FOLDER,\n",
+    "    KOLUMBUS_OUTPUT_FOLDER,\n",
+    ")\n",
+    "\n",
     "# Declaring global variables:\n",
     "\n",
     "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
-    "OUTPUT_FOLDER_PORTO = \"../hashed_data/grid/porto/\"\n",
-    "OUTPUT_FOLDER_ROME = \"../hashed_data/grid/rome/\"\n",
-    "OUTPUT_FOLDER_KOLUMBUS = \"../hashed_data/grid/kolumbus/\"\n",
+    "OUTPUT_FOLDER_PORTO = \"../dataset/hashed_data/grid/porto/\"\n",
+    "OUTPUT_FOLDER_ROME = \"../dataset/hashed_data/grid/rome/\"\n",
+    "OUTPUT_FOLDER_KOLUMBUS = \"../dataset/hashed_data/grid/kolumbus/\"\n",
     "\n",
     "PORTO_DATA = f\"../{PORTO_OUTPUT_FOLDER}/\"\n",
     "ROME_DATA = f\"../{ROME_OUTPUT_FOLDER}/\"\n",
@@ -51,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
