scheme classes into main directory by removing helper folder

--- a/hash_generation/generate_grid_hashes.ipynb
+++ b/hash_generation/generate_grid_hashes.ipynb
@@ -7,6 +7,10 @@
    "outputs": [],
    "source": [
     "# Importing nescessary modules\n",
+    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
+    "from utils.helpers import file_handler as fh\n",
+    "from utils.helpers import metafile_handler as mfh\n",
+    "from schemes.lsh_grid import GridLSH\n",
     "import os\n",
     "import sys\n",
     "import shutil\n",
@@ -14,11 +18,7 @@
     "\n",
     "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.append(parentdir)\n",
-    "from schemes.helpers.lsh_grid import GridLSH\n",
-    "from utils.helpers import metafile_handler as mfh\n",
-    "from utils.helpers import file_handler as fh\n",
-    "from utils.helpers.save_trajectory import save_trajectory_hashes"
+    "sys.path.append(parentdir)"
    ]
   },
   {
