--- a/hash_generation/generate_disk_hashes.ipynb
+++ b/hash_generation/generate_disk_hashes.ipynb
@@ -16,7 +16,12 @@
    "outputs": [],
    "source": [
     "# Importing nescessary modules\n",
-    "import os, sys\n",
+    "from utils.helpers.save_trajectory import save_trajectory_hashes\n",
+    "from utils.helpers import file_handler as fh\n",
+    "from utils.helpers import metafile_handler as mfh\n",
+    "from schemes.lsh_disk import DiskLSH\n",
+    "import os\n",
+    "import sys\n",
     "import shutil\n",
     "import timeit as ti\n",
     "from tqdm import tqdm\n",
@@ -25,13 +30,7 @@
     "\n",
     "currentdir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.append(parentdir)\n",
-    "\n",
-    "\n",
-    "from schemes.helpers.lsh_disk import DiskLSH\n",
-    "from utils.helpers import metafile_handler as mfh\n",
-    "from utils.helpers import file_handler as fh\n",
-    "from utils.helpers.save_trajectory import save_trajectory_hashes"
+    "sys.path.append(parentdir)"
    ]
   },
   {
