--- a/hashed_similarities/compute_disk_similarities.ipynb
+++ b/hashed_similarities/compute_disk_similarities.ipynb
@@ -34,15 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "measure = \"dtw\"\n",
     "similarities = generate_disk_hash_similarity(\n",
-    "    city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50\n",
+    "    city=\"rome\", diameter=1.6, layers=5, disks=100, measure=measure, size=50\n",
     ")\n",
-    "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
+    "output_path = f\"similarity_values/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -55,32 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cy Pool Frechet: 0/50\n",
-      "Cy Pool Frechet: 5/50\n",
-      "Cy Pool Frechet: 10/50\n",
-      "Cy Pool Frechet: 15/50\n",
-      "Cy Pool Frechet: 20/50\n",
-      "Cy Pool Frechet: 25/50\n",
-      "Cy Pool Frechet: 30/50\n",
-      "Cy Pool Frechet: 35/50\n",
-      "Cy Pool Frechet: 40/50\n",
-      "Cy Pool Frechet: 45/50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "measure = \"frechet\"\n",
     "similarities = generate_disk_hash_similarity(\n",
-    "    city=\"rome\", diameter=1.6, layers=5, disks=50, measure=measure, size=50\n",
+    "    city=\"rome\", diameter=1.6, layers=5, disks=100, measure=measure, size=50\n",
     ")\n",
-    "output_path = f\"output/disk/rome/disk_rome-{measure}.csv\"\n",
+    "output_path = f\"similarity_values/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -93,15 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Disk Porto\n",
     "measure = \"dtw\"\n",
-    "# measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\"porto\", 2.2, 4, 60, measure=measure)\n",
-    "output_path = f\"output/disk/porto/disk_porto-{measure}.csv\"\n",
+    "similarities = generate_disk_hash_similarity(\"porto\", diameter=2.2, layers=4, disks=60, measure=measure, size=50)\n",
+    "output_path = f\"similarity_values/disk/porto/disk_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -114,15 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Disk Kolumbus\n",
     "measure = \"dtw\"\n",
-    "# measure = \"frechet\"\n",
-    "similarities = generate_disk_hash_similarity(\"kolumbus\", 2.2, 4, 60, measure=measure)\n",
-    "output_path = f\"output/disk/kolumbus/disk_kolumbus-{measure}.csv\"\n",
+    "similarities = generate_disk_hash_similarity(\"kolumbus\", diameter=2.2, layers=4, disks=60, measure=measure, size=50)\n",
+    "output_path = f\"similarity_values/disk/kolumbus/disk_kolumbus-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   }
@@ -143,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
