--- a/hashed_similarities/compute_grid_similarities.ipynb
+++ b/hashed_similarities/compute_grid_similarities.ipynb
@@ -31,8 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities = generate_grid_hash_similarity(\"rome\", 1.2, 4)\n",
-    "output_path = \"output/grid/rome/grid_rome.csv\"\n",
+    "measure=\"dtw\"\n",
+    "similarities = generate_grid_hash_similarity(\n",
+    "    city=\"rome\", res=1.2, layers=4, measure=measure, size=50\n",
+    ")\n",
+    "output_path = f\"similarity_values/grid/rome/grid_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -45,12 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities = generate_grid_hash_similarity(\"porto\", 1.6, 5)\n",
-    "output_path = \"output/grid/porto/grid_porto.csv\"\n",
+    "measure=\"dtw\"\n",
+    "similarities = generate_grid_hash_similarity(city=\"porto\", res=1.6, layers=5, measure=measure, size=50)\n",
+    "output_path = f\"similarity_values/grid/porto/grid_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   },
@@ -63,12 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarities = generate_grid_hash_similarity(\"kolumbus\", 1.0, 5)\n",
-    "output_path = \"output/grid/kolumbus/grid_kolumbus.csv\"\n",
+    "measure=\"dtw\"\n",
+    "similarities = generate_grid_hash_similarity(city=\"kolumbus\", res=1.0, layers=5, measure=measure, size=50)\n",
+    "output_path = f\"similarity_values/grid/kolumbus/grid_kolumbus-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
   }
@@ -89,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6+"
   }
  },
  "nbformat": 4,
