--- a/hashed_similarities/compute_disk_similarities.ipynb
+++ b/hashed_similarities/compute_disk_similarities.ipynb
@@ -36,11 +36,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of sorted_trajectories 50\n",
+      "Total disk/hash coordinates for R_ATG 11\n",
+      "Total comparisons 6375\n",
+      "Total skipped comparisons 1515\n"
+     ]
+    }
+   ],
    "source": [
     "measure = \"dtw\"\n",
     "similarities = generate_disk_hash_similarity(\n",
-    "    city=\"rome\", diameter=1.6, layers=5, disks=100, measure=measure, size=50\n",
+    "    city=\"rome\", diameter=0.6, layers=5, disks=50, measure=measure, size=50\n",
     ")\n",
     "output_path = f\"similarity_values/disk/rome/disk_rome-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +92,9 @@
    "outputs": [],
    "source": [
     "measure = \"dtw\"\n",
-    "similarities = generate_disk_hash_similarity(\"porto\", diameter=2.2, layers=4, disks=60, measure=measure, size=50)\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    \"porto\", diameter=2.2, layers=4, disks=60, measure=measure, size=50\n",
+    ")\n",
     "output_path = f\"similarity_values/disk/porto/disk_porto-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -100,7 +113,9 @@
    "outputs": [],
    "source": [
     "measure = \"dtw\"\n",
-    "similarities = generate_disk_hash_similarity(\"kolumbus\", diameter=2.2, layers=4, disks=60, measure=measure, size=50)\n",
+    "similarities = generate_disk_hash_similarity(\n",
+    "    \"kolumbus\", diameter=2.2, layers=4, disks=60, measure=measure, size=50\n",
+    ")\n",
     "output_path = f\"similarity_values/disk/kolumbus/disk_kolumbus-{measure}.csv\"\n",
     "similarities.to_csv(os.path.abspath(output_path))"
    ]
@@ -122,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
